src/objects/CrossPlantStatus__c.object
<CustomObject>
    <description>JIRA : SFDC1-131 ,  This holds Cross Plant Status related to Products</description>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>SFDC1-2445 : Legacy ID field for Cross Plant Status Object</description>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKIDCrossPlantStatus__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>CrP{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID CrossPlantStatus</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SAPCode__c</fullName>
        <label>SAP Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Cross Plant Status</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cross Plant Status</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>